--- a/src/app/site-app/site-app.component.html
+++ b/src/app/site-app/site-app.component.html
@@ -3,10 +3,11 @@
 </p>
 
   <section *ngIf="sites.length > 0">
-  <input class="new-todo" placeholder="sua busca" autofocus="" [(ngModel)]="q" >
+  <input  placeholder="sua busca" autofocus="" [(ngModel)]="q" >
+  <button (click)= "createHero()" > add </button>
     <ul class="todo-list">
       <li *ngFor="let site of heroes" >
-          <div align="center" >
+          <div align="left" >
             <img src="{{site.icon}}" width="32px;"  (click)= "search(site)" >
             <label>{{site.title}}</label>
           </div>
